# rh-acm-switchover

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TEST_REPORT.md  TODO.md  acm_switchover.py  analyze_soak_results.sh  check_rbac.py  monitor_soak_test.sh  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  show_state.py
.clavix/: INSTRUCTIONS.md  config.json
.github/: copilot-instructions.md
backend/: README.md  requirements.txt
container-bootstrap/: Containerfile
docs/: ACM_SWITCHOVER_RUNBOOK.md  ACM_SWITCHOVER_RUNBOOK_TLDR.md  ACM_switchover_runbook_Complete_Nov12.txt  ARCHITECTURE.md  CHANGELOG.md  CONTAINER_USAGE.md  DELIVERABLES.md  INSTALL.md  PRD.md  QUICKREF.md  TESTING.md  USAGE.md
lib/: __init__.py  constants.py  exceptions.py  kube_client.py  rbac_validator.py  utils.py  validation.py  waiter.py
manifests/: api-deployment.yaml  api-route.yaml  api-service.yaml  pvc-state.yaml
modules/: __init__.py  activation.py  backup_schedule.py  decommission.py  finalization.py  post_activation.py  preflight.py  preflight_coordinator.py  preflight_validators.py  primary_prep.py  rollback.py
packaging/: README.md
scripts/: README.md  constants.sh  discover-hub.sh  lib-common.sh  postflight-check.sh  preflight-check.sh
tests/: README-scripts-tests.md  README.md  test_activation.py  test_auto_import.py  test_cli_auto_import.py  test_exceptions.py  test_finalization.py  test_kube_client.py  test_main.py  test_post_activation.py  test_preflight.py  test_preflight_backward_compat.py  (+12 more)
(+69 files in other folders)
