[project]
name = "rh-acm-switchover"
version = "1.5.0"
description = "ACM Hub Switchover automation tooling"
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "RH ACM Switchover Maintainers" }]
license = { text = "Apache-2.0" }
dependencies = [
  "kubernetes",
  "PyYAML",
  "rich",
  "tenacity",
]

[project.scripts]
acm-switchover = "acm_switchover:main"
acm-switchover-rbac = "check_rbac:main"
acm-switchover-state = "show_state:main"

[tool.setuptools]
py-modules = ["acm_switchover", "check_rbac", "show_state"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "modules*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
